# algebra

./: .gitignore  .pylintrc  LICENSE  README.md  TODO.md  coverage.json  pyproject.toml  requirements.txt
.github/workflows/: complexity.yml  coverage.yml  flake8.yml  pylint.yml  test.yml
showcase/: exotic_outer_automorphism_of_S6.md  expectation_number_asymptotics.md
src/group_theory/: __init__.py  group_actions.py  group_elements.py  groups.py  homomorphisms.py
src/group_theory/base/: group_actions.py  group_elements.py  groups.py  homomorphisms.py
src/group_theory/common_groups/: cyclic_groups.py  finite_abelian_groups.py  matrix_groups.py  misc_groups.py  permutation_groups.py  residue_class_groups.py
src/group_theory/constructions/: automorphism_groups.py  automorphsim_groups.py  cartesian_products.py  lizers.py  products.py  quotient_groups.py  semidirect_products.py  subgroup_constructions.py  subgroup_series.py  sylow.py
src/group_theory/statistical_group_theory/: invariants.py
src/noetherpy/: __init__.py
src/noetherpy/group_theory/: __init__.py  group_actions.py  group_elements.py  groups.py  homomorphisms.py
src/noetherpy/group_theory/common_groups/: __init__.py  cyclic_groups.py  finite_abelian_groups.py  matrix_groups.py  misc_groups.py  permutation_groups.py
src/noetherpy/group_theory/constructions/: __init__.py  automorphism_groups.py  products.py  subgroup_constructions.py  subgroup_series.py  sylow.py
src/noetherpy/group_theory/statistical_group_theory/: __init__.py  invariants.py
src/noetherpy/ring_theory/: __init__.py  ring_elements.py  rings.py
src/ring_theory/: ring_elements.py  rings.py
tests/benchmarks/: test_permutations.py  test_symmetric_group.py
tests/group_theory/: test_group_actions.py  test_groups.py  test_homomorphisms.py
tests/group_theory/common_groups/: test_cyclic_groups.py  test_finite_abelian_groups.py  test_matrix_groups.py  test_misc_groups.py  test_permutation_groups.py
tests/group_theory/constructions/: test_automorphism_groups.py  test_products.py  test_subgroup_constructions.py  test_subgroup_series.py  test_sylow.py
tests/groups/: test_group_elements.py  test_groups.py  test_homomorphisms.py  test_orders.py  test_quotients.py  test_subgroups.py
tests/groups/common_groups/: test_misc_groups.py  test_orders.py  test_permutation_groups.py
tests/order/: test_orders.py
tests/ring_theory/: test_ring_elements.py  test_rings.py
