[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noetherpy"
version = "0.0.1.dev1"
authors = [
  { name="Chase Cain", email="charlescain0607@gmail.com" },
]
description = "A library for computational abstract algebra"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
pythonpath = [
  "./src"
]


[tool.pylint]
disable = [
    "invalid-name",
    "missing-function-docstring",
    "too-many-instance-attributes",
]
good-names=[ 
    "i", "j", "k",
    "a", "b", "c",
    "w", "x", "y", "z",
    "G", "X",
    "g", "h",
    "r", "s",
    "GF",
    "N", "n", "m",
    "p", "q",
    "GL", "SL", "O", "SO", "PSO", "PO", "PGL", "PSL",
    "Aut", "Inn", "Out",
]
min-similarity-lines = 100
max-line-length = 120