[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noetherpy"
version = "0.0.2"
authors = [
  { name="Chase Cain", email="charlescain0607@gmail.com" },
]
description = "A library for computational abstract algebra"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "galois>=0.3.5",
    "numpy>=1.23",
    "quaternionic>=1.0",
    "scipy>=1.11",

]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black >= 22.8.0",
    "pylint >= 2.14",
    "pytest",
    "coverage",
    "radon>=6.0",
]


[tool.pytest.ini_options]
pythonpath = [
  "./src"
]


[tool.pylint]
disable = [
    "invalid-name",
    "missing-function-docstring",
    "too-many-instance-attributes",
]
good-names=[ 
    "i", "j", "k",
    "a", "b", "c",
    "w", "x", "y", "z",
    "G", "X",
    "g", "h",
    "r", "s",
    "GF",
    "N", "n", "m",
    "p", "q",
    "GL", "SL", "O", "SO", "PSO", "PO", "PGL", "PSL",
    "Aut", "Inn", "Out",
]
min-similarity-lines = 100
max-line-length = 120
